--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "node": ">=6"
   },
   "scripts": {
+    "build": "npm run lint && webpack -p",
+    "coverage": "nyc report --reporter=text-lcov",
     "lint": "xo",
-    "test": "npm run lint && ava",
-    "build": "webpack -p",
-    "start": "webpack --watch"
+    "start": "webpack --watch",
+    "test": "nyc ava",
+    "test:watch": "npm run test -- -watch"
   },
   "files": [
     "index.js"
@@ -30,8 +32,10 @@
   "devDependencies": {
     "ava": "^0.17.0",
     "babel-loader": "6.2.10",
+    "babel-plugin-istanbul": "^4.0.0",
     "babel-preset-env": "^1.1.8",
     "babel-register": "6.22.0",
+    "nyc": "^10.1.2",
     "webpack": "2.2.1",
     "xo": "^0.17.0"
   },
@@ -44,5 +48,21 @@
     "require": [
       "babel-register"
     ]
+  },
+  "nyc": {
+    "include": [
+      "test.js"
+    ],
+    "reporter": [
+      "lcov",
+      "text"
+    ],
+    "lines": 100,
+    "statements": 100,
+    "functions": 100,
+    "branches": 100,
+    "check-coverage": true,
+    "sourceMap": false,
+    "instrument": false
   }
 }
