--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "engines": {
     "node": ">=6"
   },
+  "bin": "./cli.js",
   "man": "./README.md",
   "scripts": {
     "build": "npm run lint && webpack -p",
@@ -24,9 +25,18 @@
   "browser": "dist/bundle.js",
   "main": "index.js",
   "keywords": [
-    ""
+    "es6",
+    "boilerplate",
+    "browser",
+    "node",
+    "starter"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "gitfig": "^1.0.1",
+    "inquirer": "^3.0.6",
+    "inquirer-questions-counter": "^1.0.1",
+    "vorpal": "^1.11.4"
+  },
   "devDependencies": {
     "ava": "^0.18.2",
     "babel-loader": "^6.4.0",
