--- a/package.json
+++ b/package.json
@@ -9,15 +9,7 @@
     "node": ">=6"
   },
   "man": "./README.md",
-  "scripts": {
-    "build": "npm run lint && webpack -p",
-    "coverage": "nyc report --reporter=text-lcov",
-    "coverage:report": "npm run coverage | codecov",
-    "lint": "xo",
-    "start": "webpack --watch",
-    "test": "nyc ava",
-    "test:watch": "npm run test -- -watch"
-  },
+  "scripts": {},
   "files": [
     "generators"
   ],
@@ -34,13 +26,6 @@
     "which": "^1.2.14",
     "yeoman-generator": "^1.1.1"
   },
-  "devDependencies": {
-    "xo": "^0.17.1"
-  },
-  "xo": {
-    "esnext": true,
-    "semicolon": true,
-    "space": 2
-  },
+  "devDependencies": {},
   "preferGlobal": true
 }
