--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -40,8 +40,8 @@
     "babel-register": "^6.24.0",
     "codecov": "^2.0.1",
     "nyc": "^10.1.2",
-    "webpack": "2.2.1",
-    "xo": "^0.17.1"
+    "webpack": "^2.3.2",
+    "xo": "^0.18.1"
   },
   "xo": {
     "esnext": true,
