--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "generator-es-next",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0-rc.1",
   "description": "Rich featured ES6 module generator for browser and nodejs",
   "license": "MIT",
-  "repository": "likerRr/es6-module-boilerplate",
+  "repository": "likerRr/generator-es-next",
   "author": "Alexey Lizurchik <al.lizurchik@gmail.com> (http://likerRr.ru)",
   "engines": {
     "node": ">=6"
@@ -13,11 +13,18 @@
   "files": [
     "generators"
   ],
-  "browser": "dist/bundle.js",
   "main": "index.js",
   "keywords": [
     "yeoman-generator",
     "es6",
+    "es2015",
+    "es2016",
+    "es2017",
+    "javascript",
+    "test",
+    "travis",
+    "codecov",
+    "esnext",
     "boilerplate",
     "browser",
     "node",
