--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-es-next",
-  "version": "1.0.0-rc.2",
+  "version": "1.0.0-rc.3",
   "description": "Rich featured ES6 module generator for browser and nodejs",
   "license": "MIT",
   "repository": "likerRr/generator-es-next",
@@ -13,7 +13,7 @@
   "files": [
     "generators"
   ],
-  "main": "index.js",
+  "main": "./generators/app/index.js",
   "keywords": [
     "yeoman-generator",
     "es6",
