--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "node": ">=6"
   },
   "man": "README.md",
-  "scripts": {},
+  "scripts": {
+    "test": "jest"
+  },
   "files": [
     "generators"
   ],
@@ -34,6 +36,14 @@
     "which": "^1.2.14",
     "yeoman-generator": "^1.1.1"
   },
-  "devDependencies": {},
-  "preferGlobal": true
+  "devDependencies": {
+    "jest": "^19.0.2",
+    "yeoman-assert": "^3.0.0",
+    "yeoman-test": "^1.6.0"
+  },
+  "preferGlobal": true,
+  "jest": {
+    "testEnvironment": "node",
+    "testMatch": ["**/__tests__/*.js"]
+  }
 }
