Add `jest` as a testing tool
* Chose between `jest` (default) and `ava` as a testing framework
* Update Travis config to reflect coverage at codecov.io
* Placeholder empty but mandatory scripts in `package.json`

--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -11,9 +11,10 @@
   "man": "./README.md",
   "scripts": {
     "build": "npm run lint && webpack -p",
-    "coverage:report": "npm run coverage | codecov",
     "lint": "xo",
     "start": "webpack --watch",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:coverage": "npm run coverage:collect && codecov",
     "coverage:collect": "echo \"Error: no test specified\" && exit 1"
   },
   "files": [
