--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-es-next",
-  "version": "1.0.0-rc.5",
+  "version": "1.0.0-rc.6",
   "description": "Feature-rich ES6 module generator for browser and nodejs",
   "license": "MIT",
   "repository": "likerrr/generator-es-next",
@@ -10,7 +10,8 @@
   },
   "man": "README.md",
   "scripts": {
-    "test": "xo && jest"
+    "test": "xo && jest",
+    "prepublish": "npm run test"
   },
   "files": [
     "generators"
